@@ -1,0 +1,2 @@
+int refresh_clvmd(void);
+
